parser/BVHParser.js
// Generated from BVH.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var BVHListener = require('./BVHListener').BVHListener;
var grammarFileName = "BVH.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'HIERARCHY'", "'MOTION'", "'ROOT'", "'{'", 
                     "'}'", "'CHANNELS'", "'OFFSET'", "'JOINT'", "'End Site'", 
                     "'Frames:'", "'Frame Time:'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', "NUM", "ID", 
                      "COMMENT", "WS" ];

var ruleNames =  [ "mocap", "hierarchies", "rootSegment", "segmentID", "segmentBody", 
                   "offsets", "offset", "mchannels", "channel", "subSegments", 
                   "subSegment", "jointSegment", "endSite", "frames", "numFrames", 
                   "frameTime", "motionData" ];

function BVHParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

BVHParser.prototype = Object.create(antlr4.Parser.prototype);
BVHParser.prototype.constructor = BVHParser;

Object.defineProperty(BVHParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

BVHParser.EOF = antlr4.Token.EOF;
BVHParser.T__0 = 1;
BVHParser.T__1 = 2;
BVHParser.T__2 = 3;
BVHParser.T__3 = 4;
BVHParser.T__4 = 5;
BVHParser.T__5 = 6;
BVHParser.T__6 = 7;
BVHParser.T__7 = 8;
BVHParser.T__8 = 9;
BVHParser.T__9 = 10;
BVHParser.T__10 = 11;
BVHParser.NUM = 12;
BVHParser.ID = 13;
BVHParser.COMMENT = 14;
BVHParser.WS = 15;

BVHParser.RULE_mocap = 0;
BVHParser.RULE_hierarchies = 1;
BVHParser.RULE_rootSegment = 2;
BVHParser.RULE_segmentID = 3;
BVHParser.RULE_segmentBody = 4;
BVHParser.RULE_offsets = 5;
BVHParser.RULE_offset = 6;
BVHParser.RULE_mchannels = 7;
BVHParser.RULE_channel = 8;
BVHParser.RULE_subSegments = 9;
BVHParser.RULE_subSegment = 10;
BVHParser.RULE_jointSegment = 11;
BVHParser.RULE_endSite = 12;
BVHParser.RULE_frames = 13;
BVHParser.RULE_numFrames = 14;
BVHParser.RULE_frameTime = 15;
BVHParser.RULE_motionData = 16;

function MocapContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_mocap;
    return this;
}

MocapContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MocapContext.prototype.constructor = MocapContext;

MocapContext.prototype.hierarchies = function() {
    return this.getTypedRuleContext(HierarchiesContext,0);
};

MocapContext.prototype.frames = function() {
    return this.getTypedRuleContext(FramesContext,0);
};

MocapContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BVHParser.WS);
    } else {
        return this.getToken(BVHParser.WS, i);
    }
};


MocapContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterMocap(this);
	}
};

MocapContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitMocap(this);
	}
};




BVHParser.MocapContext = MocapContext;

BVHParser.prototype.mocap = function() {

    var localctx = new MocapContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, BVHParser.RULE_mocap);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 37;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 34;
            this.match(BVHParser.WS);
            this.state = 39;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 40;
        this.match(BVHParser.T__0);
        this.state = 41;
        this.hierarchies(0);
        this.state = 45;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 42;
            this.match(BVHParser.WS);
            this.state = 47;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 48;
        this.match(BVHParser.T__1);
        this.state = 49;
        this.frames();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HierarchiesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_hierarchies;
    return this;
}

HierarchiesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HierarchiesContext.prototype.constructor = HierarchiesContext;

HierarchiesContext.prototype.rootSegment = function() {
    return this.getTypedRuleContext(RootSegmentContext,0);
};

HierarchiesContext.prototype.hierarchies = function() {
    return this.getTypedRuleContext(HierarchiesContext,0);
};

HierarchiesContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterHierarchies(this);
	}
};

HierarchiesContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitHierarchies(this);
	}
};



BVHParser.prototype.hierarchies = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new HierarchiesContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 2;
    this.enterRecursionRule(localctx, 2, BVHParser.RULE_hierarchies, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 52;
        this.rootSegment();
        this._ctx.stop = this._input.LT(-1);
        this.state = 58;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                localctx = new HierarchiesContext(this, _parentctx, _parentState);
                this.pushNewRecursionContext(localctx, _startState, BVHParser.RULE_hierarchies);
                this.state = 54;
                if (!( this.precpred(this._ctx, 2))) {
                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                }
                this.state = 55;
                this.rootSegment(); 
            }
            this.state = 60;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function RootSegmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_rootSegment;
    return this;
}

RootSegmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RootSegmentContext.prototype.constructor = RootSegmentContext;

RootSegmentContext.prototype.segmentID = function() {
    return this.getTypedRuleContext(SegmentIDContext,0);
};

RootSegmentContext.prototype.segmentBody = function() {
    return this.getTypedRuleContext(SegmentBodyContext,0);
};

RootSegmentContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BVHParser.WS);
    } else {
        return this.getToken(BVHParser.WS, i);
    }
};


RootSegmentContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterRootSegment(this);
	}
};

RootSegmentContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitRootSegment(this);
	}
};




BVHParser.RootSegmentContext = RootSegmentContext;

BVHParser.prototype.rootSegment = function() {

    var localctx = new RootSegmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, BVHParser.RULE_rootSegment);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 64;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 61;
            this.match(BVHParser.WS);
            this.state = 66;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 67;
        this.match(BVHParser.T__2);
        this.state = 71;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 68;
            this.match(BVHParser.WS);
            this.state = 73;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 74;
        this.segmentID();
        this.state = 78;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 75;
            this.match(BVHParser.WS);
            this.state = 80;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 81;
        this.match(BVHParser.T__3);
        this.state = 82;
        this.segmentBody();
        this.state = 86;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 83;
            this.match(BVHParser.WS);
            this.state = 88;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 89;
        this.match(BVHParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SegmentIDContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_segmentID;
    return this;
}

SegmentIDContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SegmentIDContext.prototype.constructor = SegmentIDContext;

SegmentIDContext.prototype.ID = function() {
    return this.getToken(BVHParser.ID, 0);
};

SegmentIDContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterSegmentID(this);
	}
};

SegmentIDContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitSegmentID(this);
	}
};




BVHParser.SegmentIDContext = SegmentIDContext;

BVHParser.prototype.segmentID = function() {

    var localctx = new SegmentIDContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, BVHParser.RULE_segmentID);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 91;
        this.match(BVHParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SegmentBodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_segmentBody;
    return this;
}

SegmentBodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SegmentBodyContext.prototype.constructor = SegmentBodyContext;

SegmentBodyContext.prototype.offsets = function() {
    return this.getTypedRuleContext(OffsetsContext,0);
};

SegmentBodyContext.prototype.NUM = function() {
    return this.getToken(BVHParser.NUM, 0);
};

SegmentBodyContext.prototype.mchannels = function() {
    return this.getTypedRuleContext(MchannelsContext,0);
};

SegmentBodyContext.prototype.subSegments = function() {
    return this.getTypedRuleContext(SubSegmentsContext,0);
};

SegmentBodyContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BVHParser.WS);
    } else {
        return this.getToken(BVHParser.WS, i);
    }
};


SegmentBodyContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterSegmentBody(this);
	}
};

SegmentBodyContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitSegmentBody(this);
	}
};




BVHParser.SegmentBodyContext = SegmentBodyContext;

BVHParser.prototype.segmentBody = function() {

    var localctx = new SegmentBodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, BVHParser.RULE_segmentBody);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 93;
        this.offsets();
        this.state = 97;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 94;
            this.match(BVHParser.WS);
            this.state = 99;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 100;
        this.match(BVHParser.T__5);
        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 101;
            this.match(BVHParser.WS);
            this.state = 106;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 107;
        this.match(BVHParser.NUM);
        this.state = 108;
        this.mchannels(0);
        this.state = 109;
        this.subSegments(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OffsetsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_offsets;
    return this;
}

OffsetsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OffsetsContext.prototype.constructor = OffsetsContext;

OffsetsContext.prototype.offset = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(OffsetContext);
    } else {
        return this.getTypedRuleContext(OffsetContext,i);
    }
};

OffsetsContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BVHParser.WS);
    } else {
        return this.getToken(BVHParser.WS, i);
    }
};


OffsetsContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterOffsets(this);
	}
};

OffsetsContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitOffsets(this);
	}
};




BVHParser.OffsetsContext = OffsetsContext;

BVHParser.prototype.offsets = function() {

    var localctx = new OffsetsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, BVHParser.RULE_offsets);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 114;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 111;
            this.match(BVHParser.WS);
            this.state = 116;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 117;
        this.match(BVHParser.T__6);
        this.state = 121;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 118;
            this.match(BVHParser.WS);
            this.state = 123;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 124;
        this.offset();
        this.state = 128;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 125;
            this.match(BVHParser.WS);
            this.state = 130;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 131;
        this.offset();
        this.state = 135;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 132;
            this.match(BVHParser.WS);
            this.state = 137;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 138;
        this.offset();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OffsetContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_offset;
    return this;
}

OffsetContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OffsetContext.prototype.constructor = OffsetContext;

OffsetContext.prototype.NUM = function() {
    return this.getToken(BVHParser.NUM, 0);
};

OffsetContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterOffset(this);
	}
};

OffsetContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitOffset(this);
	}
};




BVHParser.OffsetContext = OffsetContext;

BVHParser.prototype.offset = function() {

    var localctx = new OffsetContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, BVHParser.RULE_offset);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 140;
        this.match(BVHParser.NUM);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MchannelsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_mchannels;
    return this;
}

MchannelsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MchannelsContext.prototype.constructor = MchannelsContext;

MchannelsContext.prototype.channel = function() {
    return this.getTypedRuleContext(ChannelContext,0);
};

MchannelsContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BVHParser.WS);
    } else {
        return this.getToken(BVHParser.WS, i);
    }
};


MchannelsContext.prototype.mchannels = function() {
    return this.getTypedRuleContext(MchannelsContext,0);
};

MchannelsContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterMchannels(this);
	}
};

MchannelsContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitMchannels(this);
	}
};



BVHParser.prototype.mchannels = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new MchannelsContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 14;
    this.enterRecursionRule(localctx, 14, BVHParser.RULE_mchannels, _p);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 146;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===BVHParser.WS) {
            this.state = 143;
            this.match(BVHParser.WS);
            this.state = 148;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 149;
        this.channel();
        this._ctx.stop = this._input.LT(-1);
        this.state = 161;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                localctx = new MchannelsContext(this, _parentctx, _parentState);
                this.pushNewRecursionContext(localctx, _startState, BVHParser.RULE_mchannels);
                this.state = 151;
                if (!( this.precpred(this._ctx, 2))) {
                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                }
                this.state = 155;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while(_la===BVHParser.WS) {
                    this.state = 152;
                    this.match(BVHParser.WS);
                    this.state = 157;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 158;
                this.channel(); 
            }
            this.state = 163;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function ChannelContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_channel;
    return this;
}

ChannelContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ChannelContext.prototype.constructor = ChannelContext;

ChannelContext.prototype.ID = function() {
    return this.getToken(BVHParser.ID, 0);
};

ChannelContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterChannel(this);
	}
};

ChannelContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitChannel(this);
	}
};




BVHParser.ChannelContext = ChannelContext;

BVHParser.prototype.channel = function() {

    var localctx = new ChannelContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, BVHParser.RULE_channel);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 164;
        this.match(BVHParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SubSegmentsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_subSegments;
    return this;
}

SubSegmentsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SubSegmentsContext.prototype.constructor = SubSegmentsContext;

SubSegmentsContext.prototype.subSegment = function() {
    return this.getTypedRuleContext(SubSegmentContext,0);
};

SubSegmentsContext.prototype.subSegments = function() {
    return this.getTypedRuleContext(SubSegmentsContext,0);
};

SubSegmentsContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterSubSegments(this);
	}
};

SubSegmentsContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitSubSegments(this);
	}
};



BVHParser.prototype.subSegments = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new SubSegmentsContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 18;
    this.enterRecursionRule(localctx, 18, BVHParser.RULE_subSegments, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 167;
        this.subSegment();
        this._ctx.stop = this._input.LT(-1);
        this.state = 173;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                localctx = new SubSegmentsContext(this, _parentctx, _parentState);
                this.pushNewRecursionContext(localctx, _startState, BVHParser.RULE_subSegments);
                this.state = 169;
                if (!( this.precpred(this._ctx, 2))) {
                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                }
                this.state = 170;
                this.subSegment(); 
            }
            this.state = 175;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function SubSegmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_subSegment;
    return this;
}

SubSegmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SubSegmentContext.prototype.constructor = SubSegmentContext;

SubSegmentContext.prototype.jointSegment = function() {
    return this.getTypedRuleContext(JointSegmentContext,0);
};

SubSegmentContext.prototype.endSite = function() {
    return this.getTypedRuleContext(EndSiteContext,0);
};

SubSegmentContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterSubSegment(this);
	}
};

SubSegmentContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitSubSegment(this);
	}
};




BVHParser.SubSegmentContext = SubSegmentContext;

BVHParser.prototype.subSegment = function() {

    var localctx = new SubSegmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, BVHParser.RULE_subSegment);
    try {
        this.state = 178;
        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 176;
            this.jointSegment();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 177;
            this.endSite();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function JointSegmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = BVHParser.RULE_jointSegment;
    return this;
}

JointSegmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
JointSegmentContext.prototype.constructor = JointSegmentContext;

JointSegmentContext.prototype.segmentID = function() {
    return this.getTypedRuleContext(SegmentIDContext,0);
};

JointSegmentContext.prototype.segmentBody = function() {
    return this.getTypedRuleContext(SegmentBodyContext,0);
};

JointSegmentContext.prototype.WS = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(BVHParser.WS);
    } else {
        return this.getToken(BVHParser.WS, i);
    }
};


JointSegmentContext.prototype.enterRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.enterJointSegment(this);
	}
};

JointSegmentContext.prototype.exitRule = function(listener) {
    if(listener instanceof BVHListener ) {
        listener.exitJointSegment(this);
	}
};




BVHParser.JointSegmentContext = JointSegmentContext;

BVHParser.prototype.jointSegment = function() {
